--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -111,3 +111,17 @@ form.button_to {
 .text-danger {
   color: #f38792 !important;
 }
+
+.order-summary-item {
+  // border: 2px solid fuchsia;
+  max-width: 80%;
+}
+
+// .order-summary img {
+//   // width: 200px;
+//   height: auto;
+//   margin: 2px;
+//   display: block;
+//   border-radius: 0.25em;
+//   // border: 0.1em solid rgba(0, 130, 29, 0.8);
+// }
