--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -44,7 +44,13 @@
         </li> %>
         <li class="nav-item"><%= link_to "About", about_path, class: "nav-link" %></li>
         </li>
+
+    
+
+
       </ul>
+
+
       <ul class="navbar-nav">
         <li class="nav-item dropdown">
           <a
@@ -62,16 +68,20 @@
             <li><%= link_to 'Products', [:admin, :products], class: "nav-link" %></li>
           </ul>
         </li>
-
-
-
-
+        <li class="nav-item">
+        <% if current_user %>
+        <%= link_to "Logged in as #{current_user.email}", root_path, class: "nav-link small" %> <%= link_to 'Log Out', logout_path, method: :delete, class: "nav-link" %>
+        <% else %>
+          <%= link_to 'Log In', login_path, class: "nav-link" %>
+        <% end %>
+        </li>
 
 
         <li class="nav-item end-0">
           <%= link_to cart_path, class: "nav-link " do %> <%= fa_icon "shopping-cart" %>
-          My Cart (<%= cart.size %>) <% end %>
+          (<%= cart.size %>) <% end %>
         </li>
+        
       </ul>
     </div>
   </div>
