add bootstrap to login and signup forms

--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -70,7 +70,7 @@
         </li>
         <li class="nav-item">
         <% if current_user %>
-        <%= link_to "Logged in as #{current_user.email}", root_path, class: "nav-link small" %> <%= link_to 'Log Out', logout_path, method: :delete, class: "nav-link" %>
+        <%= link_to 'Log Out', logout_path, method: :delete, class: "nav-link" %>
         <% else %>
           <%= link_to 'Log In', login_path, class: "nav-link" %>
         <% end %>
