--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,28 +1,28 @@
 <h1>Sign Up</h1>
 
 <%= form_for @user do |f| %>
-  <div>
+  <div class="form-group">
     <%= f.label :first_name %>
-    <%= f.text_field :first_name, autofocus: true %>
+    <%= f.text_field :first_name, autofocus: true, class: "form-control" %>
   </div>
   <div>
   <%= f.label :last_name %>
-  <%= f.text_field :last_name %>
+  <%= f.text_field :last_name, class: "form-control" %>
 </div>
   <div>
     <%= f.label :email %>
-    <%= f.text_field :email %>
+    <%= f.text_field :email, class: "form-control" %>
   </div>
 
   <div>
     <%= f.label :password %>
-    <%= f.password_field :password %>
+    <%= f.password_field :password, class: "form-control" %>
   </div>
   <div>
     <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation %>
+    <%= f.password_field :password_confirmation, class: "form-control" %>
   </div>
   <div>
-    <%= f.submit "Sign up!" %>
+    <%= f.submit "Sign up!", class: "btn btn-success mt-2" %>
   </div>
 <% end %>
