--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -5,8 +5,8 @@
   </header>
 
   <% if enhanced_cart.length < 1 %>
-    <div class="alert alert-light">
-    <h3>Looks like your cart is empty. Perhaps you need some...<a class="nav-link d-inline text-success px-1"href="http://localhost:3000/">new plants?</a>🥀 </h3>
+    <div class="alert alert-secondary">
+    🥀  Your cart is currently empty. Let's fix that with some <a class="nav-link d-inline text-success px-1"href="http://localhost:3000/">new plants.</a>
     </div>
   <% else %>
 
