--- a/app/views/admin/categories/new.html.erb
+++ b/app/views/admin/categories/new.html.erb
@@ -1,12 +1,9 @@
 <section class="admin-categories-new">
 
   <header class="page-header">
-    <h1>Admin &raquo; New Product</h1>
+    <h1>Admin &raquo; New Category</h1>
   </header>
 
-  <div class="well">
-    <%= link_to 'All Categories', [:admin, :categories], class: 'btn btn-info' %>
-  </div>
 
   <div class="row">
     <div class="col-sm-6 col-sm-offset-1">
@@ -28,7 +25,7 @@
           <%= form.text_field :name, class: 'form-control' %>
         </div>
 
-        <%= form.submit 'Create Category', class: 'btn btn-primary' %>
+        <%= form.submit 'Create Category', class: 'btn btn-success mt-2' %>
       <% end %>
     </div>
   </div>
