--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -17,7 +17,7 @@
 <div class="card text-center" style="width: 28rem;">
 <h1><%= @categories.count%></h1>
   <div class="card-body">
-    <h4 class="card-title">Categories</h4>
+    <h4 class="card-title"><%= link_to "Categories", admin_categories_url %></h4>
   </div>
 </div>
 
