--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -5,10 +5,10 @@
   </header>
 
   <div class="well">
-    <%= link_to '+ New Product', [:new, :admin, :product], class: 'btn btn-info' %>
+    <%= link_to '+ New Product', [:new, :admin, :product], class: 'btn btn-success' %>
   </div>
 
-  <div class="panel panel-default products">
+  <div class="panel panel-default products mt-2">
 
     <table class="table table-bordered">
       <thead>
