--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -7,7 +7,9 @@
     </h1>
   <% end%>
   <div>
-    <span><%product.quantity%></span>
+    <% if product.quantity < 1 %>
+    <%= button_tag 'Sold Out', class: 'soldout' %>
+    <% end %>
 
     <%= button_to add_item_cart_path(product_id: product.id), class: 'btn' ,
     method: :post do %>
