add sale helper

--- a/app/views/admin/sales/_sale.html.erb
+++ b/app/views/admin/sales/_sale.html.erb
@@ -16,7 +16,13 @@
   </td>
   
   <td>  
-    STATUS
+    <% if sale.finished? %>
+      <button class="btn btn-danger btn-sm">Finished</button>
+    <% elsif sale.upcoming? %>
+      <button class="btn btn-warning btn-sm">Upcoming</button>
+    <% else %>
+      <button class="btn btn-success btn-sm">Active</button>
+    <% end %>
   </td>
   
 </tr>
