--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,13 @@
     <%= alert %>
   <% end %>
 
-    <%= yield %>
+  <% if active_sale? %>
+    <div class="alert alert-primary mt-2" role="alert">
+      The sale is on! All plants are off!
+    </div>
+  <% end %>
+
+    <%= yield %>  
   </main>
 
   <%= yield :end_of_body %>
